--- a/templates/post.html
+++ b/templates/post.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='%23f0f0f0'/><text x='50' y='70' font-size='70' text-anchor='middle' fill='%23333'>📖</text></svg>" />
         <title>{{ title }}</title>
         <style>
             {% include "base.css" %}
